--- a/cours1/Localizable.xcstrings
+++ b/cours1/Localizable.xcstrings
@@ -53,19 +53,22 @@
     "Modifier le profil" : {
 
     },
-    "new game" : {
-
-    },
     "Nom d'utilisateur" : {
 
     },
     "Non" : {
 
     },
+    "Nouvelle partie" : {
+
+    },
     "Oui" : {
 
     },
     "Profils utilisateurs" : {
+
+    },
+    "Wordle" : {
 
     }
   },
